--- a/src/app/styles/compatible/mobile.sass
+++ b/src/app/styles/compatible/mobile.sass
@@ -8,6 +8,11 @@ $mobile-width: 640px
             .app-header
                 background-color: var(--el-menu-bg-color)
                 color: var(--el-menu-text-color)
+                .nav-container
+                    height: 100%
+                    display: flex
+                    justify-content: space-around
+                    align-items: center
             .content-container
                 width: 100%
                 padding: 0
