--- a/src/app/styles/element.sass
+++ b/src/app/styles/element.sass
@@ -5,6 +5,8 @@
  * https://opensource.org/licenses/MIT
  */
 
+@import "element-plus/theme-chalk/display.css"
+
 // Compatible element-plus 2.x.x for element-ui
 
 .el-button--small
