--- a/src/app/components/Dashboard/style.sass
+++ b/src/app/components/Dashboard/style.sass
@@ -37,3 +37,8 @@
             color: var(--el-text-color-primary)
         a:visited
             color: var(--el-text-color-primary)
+    .dashboard-chart-title
+        color: var(--el-text-color-primary)
+        font-weight: 700
+        font-size: 120%
+        text-align: justify
