--- a/src/app/components/Dashboard/style.sass
+++ b/src/app/components/Dashboard/style.sass
@@ -24,6 +24,9 @@
         padding-bottom: 20px
     .indicator-container,.mom-container,.top-visit-container,.calendar-container
         min-height: 280px
+        display: flex
+        flex-direction: column
+        gap: 4px
     .help-us-link
         color: var(--el-text-color-primary)
         text-align: center
