--- a/src/app/components/Report/styles/element.sass
+++ b/src/app/components/Report/styles/element.sass
@@ -9,19 +9,14 @@
     margin-left: 5px !important
 
 .batch-delete-button
-    margin-right: 10px
-    padding-top: 8px !important
     display: inline-flex
 
 .export-dropdown
-    margin-left: 4px
     &-menu-icon
         font-size: 16px
-
-    &-button
-        width: 30px
-        padding: 7px !important
-        margin-top: 8px
+.record-filter-icon-button
+    width: 30px
+    padding: 7px !important
 
 .el-table__header
     width: 100%
