--- a/src/app/styles/index.sass
+++ b/src/app/styles/index.sass
@@ -36,6 +36,8 @@ a
     width: 100%
     background: var(--timer-app-container-bg-color)
     margin: auto
+    >.el-scrollbar
+        width: 100%
 
 .content-container
     margin-top: var(--timer-container-container-padding)
@@ -60,12 +62,25 @@ a
         width: 100%
         padding-bottom: 10px
         padding-top: 18px
-        margin-bottom: 10px
-
+        box-sizing: border-box
         display: flex
+        gap: 20px
         flex-wrap: wrap
-        >*
-            margin-bottom: 10px
+        align-items: center
+        .filter-item
+            display: inline-flex
+
+            .el-input__suffix
+                width: 20px
+
+            .el-picker-panel__sidebar
+                width: 130px !important
+
+            .el-picker-panel [slot="sidebar"] + .el-picker-panel__body,
+            .el-picker-panel__sidebar + .el-picker-panel__body
+                margin-left: 130px !important
+            .el-range-input
+                width: 120px
         .el-input
             min-width: 180px
         .el-select
@@ -76,30 +91,12 @@ a
 .filter-name
     margin-right: 4px
 
-.filter-item
-    display: inline-flex
-    padding-right: 20px
-
-    .el-input__suffix
-        width: 20px
-
-    .el-picker-panel__sidebar
-        width: 130px !important
-
-    .el-picker-panel [slot="sidebar"] + .el-picker-panel__body,
-    .el-picker-panel__sidebar + .el-picker-panel__body
-        margin-left: 130px !important
-    .el-range-input
-        width: 120px
-
-.filter-item.el-switch
-    display: inline-flex !important
-
 .filter-switch
     display: inline-flex
     align-items: center
+    justify-content: center
+    gap: 5px
     .filter-name
-        display: inline-flex
         color: var(--el-text-color-secondary)
         font-weight: bold
         font-size: 14px
@@ -108,6 +105,8 @@ a
 .filter-item-right,.filter-item-right-group
     display: inline-flex
     margin-left: auto
+.filter-item-right-group
+    gap: 4px
 
 .filter-item.el-input
     width: 225px
@@ -167,3 +166,16 @@ html[data-theme='dark']:root
 @media (max-width: 600px)
     \:root
         --timer-container-container-padding: 20px
+    .filter-container .el-card__body
+        flex-direction: column
+        gap: 10px
+        .filter-item
+            margin-bottom: 0px
+            width: 100%
+            margin-bottom: 0px !important
+            .el-date-editor
+                .el-range-input
+                    width: 39%
+        .filter-item-right,
+        .filter-item-right-group
+            margin-left: unset
