--- a/src/app/components/Report/ReportList/style.sass
+++ b/src/app/components/Report/ReportList/style.sass
@@ -3,3 +3,16 @@
     display: flex
     flex-direction: column
     gap: 10px
+    .el-card__body
+        padding: 15px
+.report-item
+    .report-item-title
+        display: flex
+        justify-content: space-between
+    .report-item-content
+        display: flex
+        gap: 5px
+        .el-tag__content
+            display: flex
+            align-items: center
+            gap: 2px
