--- a/src/app/components/Report/ReportList/style.sass
+++ b/src/app/components/Report/ReportList/style.sass
@@ -1,10 +1,15 @@
 .report-list
     width: 100%
-    display: flex
-    flex-direction: column
-    gap: 10px
+    display: grid
+    gap: .6em
+    grid-template-columns: repeat(auto-fill, minmax(190px, 1fr))
     .el-card__body
         padding: 15px
+.scroll-info
+    height: 20px
+    width: 100%
+    text-align: center
+    color: var(--el-text-color-regular)
 .report-item
     .report-item-title
         display: flex
@@ -12,7 +17,12 @@
     .report-item-content
         display: flex
         gap: 5px
+        flex-wrap: wrap
+        justify-content: space-between
         .el-tag__content
             display: flex
             align-items: center
             gap: 2px
+    .report-item-content:after
+        content: ""
+        flex: auto
